--- a/Midterm/style.css
+++ b/Midterm/style.css
@@ -66,7 +66,7 @@ footer {
 }
 
 .episode-card {
-  width: calc(25% - 20px); /* Ensure width accounts for padding and margin */
+  width: calc(25% - 20px); 
   margin: 10px;
   padding: 10px;
   box-sizing: border-box;
